# template-fastapi-sqlalchemy-mysql-auth-api-sync

./: .env.template  pyproject.toml
src/: main.py
src/api/: all.py  user_api.py
src/core/: __init__.py  auth.py  config.py  events.py  exception.py  initialization.py  midlleware.py  response.py
src/database/: __init__.py  mysqldb.py  redis.py  sqlitedb.py
src/model/: __init__.py  user.py
src/schema/: __init__.py  user_schema.py
src/service/: user_service.py
src/utils/: cryptogram.py
